[package]
name = "git-summary"
version = "0.1.1"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2021"

description = """
git-summary is a tool for checking the git status for an
entire directory tree
"""

documentation = "https://github.com/scottschroeder/git-summary-rs"
homepage = "https://github.com/scottschroeder/git-summary-rs"
repository = "https://github.com/scottschroeder/git-summary-rs"
readme = "README.md"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = "2.33.0"
anyhow = "1"
git2 = "0.13.23"
log = "0.4"
pretty_env_logger = "0.4"
prettytable-rs = "^0.8"
rayon = "1.5"
url = "2.2"
walkdir = "2"
