[package]
name = "git-summary"
version = "0.1.1"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2021"

description = """
git-summary is a tool for checking the git status for an
entire directory tree
"""

documentation = "https://github.com/scottschroeder/git-summary-rs"
homepage = "https://github.com/scottschroeder/git-summary-rs"
repository = "https://github.com/scottschroeder/git-summary-rs"
readme = "README.md"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = "2.34"
anyhow = "1"
git2 = "0.17"
log = "0.4"
pretty_env_logger = "0.4"
prettytable-rs = "^0.10"
rayon = "1"
url = "2"
walkdir = "2"
